--- a/app_public/src/index.html
+++ b/app_public/src/index.html
@@ -1,18 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Loc8rPublic</title>
-  <base href="/">
-  
-  <link rel="stylesheet" href="assets/stylesheets/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/stylesheets/all.min.css">
-  <link rel="stylesheet" href="assets/stylesheets/style.css"> 
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-framework></app-framework>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Loc8rPublic</title>
+    <base href="/" />
+
+    <link rel="stylesheet" href="assets/stylesheets/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/stylesheets/all.min.css" />
+    <link rel="stylesheet" href="assets/stylesheets/style.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+    <link
+      rel="apple-touch-icon"
+      sizes="128x128"
+      href="assets/icons/icon-128x128.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="assets/icons/icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="assets/icons/icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="assets/icons/icon-192x192.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="384x384"
+      href="assets/icons/icon-384x384.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="512x512"
+      href="assets/icons/icon-512x512.png"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+  </head>
+  <body>
+    <app-framework></app-framework>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
